--- a/Resources/ui/ksu_prefs-v1.ui
+++ b/Resources/ui/ksu_prefs-v1.ui
@@ -14,49 +14,36 @@
    <string>General</string>
   </property>
   <layout class="QGridLayout" name="gridLayout1">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>9</number>
+   </property>
+   <property name="topMargin">
+    <number>9</number>
+   </property>
+   <property name="rightMargin">
+    <number>9</number>
+   </property>
+   <property name="bottomMargin">
     <number>9</number>
    </property>
    <property name="spacing">
     <number>6</number>
    </property>
-   <item row="2" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="1" column="0">
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <widget class="QGroupBox" name="model3D_prefixes">
+      <widget class="QGroupBox" name="gb_1_analysis">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="toolTip">
-        <string>3D models prefix for shapes</string>
-       </property>
        <property name="layoutDirection">
         <enum>Qt::LeftToRight</enum>
        </property>
        <property name="title">
-        <string>3D models prefix vars</string>
+        <string>Working directory ccx tools</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -68,9 +55,9 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_9">
           <item>
-           <layout class="QGridLayout" name="models3D_prefix">
+           <layout class="QGridLayout" name="gl_analysis">
             <item row="2" column="2">
-             <widget class="Gui::PrefFileChooser" name="model3D_prefix_1" native="true">
+             <widget class="Gui::PrefFileChooser" name="fc_analysis_working_directory" native="true">
               <property name="enabled">
                <bool>true</bool>
               </property>
@@ -86,29 +73,19 @@
                 <height>0</height>
                </size>
               </property>
-              <property name="font">
-               <font>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="toolTip">
-               <string>3D models main prefix
-Usually 'KISYS3DMOD' var value</string>
+              <property name="mode">
+              <enum>Gui::FileChooser::Directory</enum>
               </property>
               <property name="prefEntry" stdset="0">
-               <cstring>model3D_prefix_1</cstring>
+               <cstring>WorkingDir</cstring>
               </property>
               <property name="prefPath" stdset="0">
                <cstring>Mod/kStepUp</cstring>
               </property>
-              <property name="mode" stdset="0">
-               <string/>
-              </property>
              </widget>
             </item>
             <item row="2" column="0">
-             <widget class="QLabel" name="shape3D_prefix_1">
+             <widget class="QLabel" name="l_analysis_working_directory">
               <property name="enabled">
                <bool>true</bool>
               </property>
@@ -118,91 +95,10 @@ Usually 'KISYS3DMOD' var value</string>
                 <height>0</height>
                </size>
               </property>
-              <property name="font">
-               <font>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="toolTip">
-               <string>3D models main prefix
-Usually 'KISYS3DMOD' var value</string>
-              </property>
               <property name="text">
-               <string>3D models prefix #1
-['KISYS3DMOD']</string>
+               <string>Use custom directory</string>
               </property>
              </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QVBoxLayout" name="verticalLayout_10">
-            <item>
-             <layout class="QGridLayout" name="models3D_prefix_2">
-              <item row="2" column="2">
-               <widget class="Gui::PrefFileChooser" name="model3D_prefix_2" native="true">
-                <property name="enabled">
-                 <bool>true</bool>
-                </property>
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="baseSize">
-                 <size>
-                  <width>0</width>
-                  <height>0</height>
-                 </size>
-                </property>
-                <property name="font">
-                 <font>
-                  <weight>50</weight>
-                  <bold>false</bold>
-                 </font>
-                </property>
-                <property name="toolTip">
-                 <string>3D models alternative prefix
-Usually an ALIAS or 'MY3DPATH' var value</string>
-                </property>
-                <property name="prefEntry" stdset="0">
-                 <cstring>model3D_prefix_2</cstring>
-                </property>
-                <property name="prefPath" stdset="0">
-                 <cstring>Mod/kStepUp</cstring>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="shape3D_prefix_2">
-                <property name="enabled">
-                 <bool>true</bool>
-                </property>
-                <property name="minimumSize">
-                 <size>
-                  <width>100</width>
-                  <height>0</height>
-                 </size>
-                </property>
-                <property name="font">
-                 <font>
-                  <weight>50</weight>
-                  <bold>false</bold>
-                 </font>
-                </property>
-                <property name="toolTip">
-                 <string>3D models alternative prefix
-Usually an ALIAS or 'MY3DPATH' var value</string>
-                </property>
-                <property name="text">
-                 <string>3D models prefix #2
-['ALIAS']</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
             </item>
            </layout>
           </item>
@@ -251,25 +147,6 @@ Usually an ALIAS or 'MY3DPATH' var value</string>
             <property name="prefEntry" stdset="0">
              <cstring>UseTempDirectory</cstring>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="comboBox">
-            <item>
-             <property name="text">
-              <string>use Grid Origin</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>use Aux Origin</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>use PCB Center</string>
-             </property>
-            </item>
            </widget>
           </item>
           <item>
@@ -413,6 +290,9 @@ Usually an ALIAS or 'MY3DPATH' var value</string>
                 <height>16777215</height>
                </size>
               </property>
+              <property name="mode">
+              <enum>Gui::FileChooser::Directory</enum>
+              </property>
               <property name="prefPath" stdset="0">
                <cstring>Mod/kStepUp</cstring>
               </property>
@@ -469,11 +349,11 @@ Usually an ALIAS or 'MY3DPATH' var value</string>
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="Gui::PrefComboBox" name="cm_comboB_1" native="true">
-            <property name="currentText" stdset="0">
+           <widget class="Gui::PrefComboBox" name="cm_comboB_1">
+            <property name="currentText">
              <string>choice#1</string>
             </property>
-            <property name="currentIndex" stdset="0">
+            <property name="currentIndex">
              <number>0</number>
             </property>
             <property name="prefEntry" stdset="0">
@@ -482,6 +362,21 @@ Usually an ALIAS or 'MY3DPATH' var value</string>
             <property name="prefPath" stdset="0">
              <cstring>Mod/kStepUp</cstring>
             </property>
+            <item>
+             <property name="text">
+              <string>choice#1</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>choice#2</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>choice#3</string>
+             </property>
+            </item>
            </widget>
           </item>
          </layout>
@@ -561,6 +456,19 @@ Usually an ALIAS or 'MY3DPATH' var value</string>
      </item>
     </layout>
    </item>
+   <item row="2" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
@@ -585,12 +493,74 @@ Usually an ALIAS or 'MY3DPATH' var value</string>
    <extends>QRadioButton</extends>
    <header>Gui/PrefWidgets.h</header>
   </customwidget>
-  <customwidget>
-   <class>Gui::PrefComboBox</class>
-   <extends>QWidget</extends>
-   <header>gui::prefcombobox.h</header>
-  </customwidget>
  </customwidgets>
- <resources/>
- <connections/>
+ <resources>
+  <include location="Resources/Fem.qrc"/>
+ </resources>
+ <connections>
+  <connection>
+   <sender>cb_wd_custom</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>le_wd_custom</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>277</x>
+     <y>240</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>66</x>
+     <y>276</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cb_wd_custom</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>l_wd_custom_path</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>277</x>
+     <y>240</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>40</x>
+     <y>276</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cb_wd_custom</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>le_wd_custom</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>277</x>
+     <y>240</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>66</x>
+     <y>276</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>cb_wd_custom</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>l_wd_custom_path</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>277</x>
+     <y>240</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>40</x>
+     <y>276</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
