--- a/Resources/ui/explode.ui
+++ b/Resources/ui/explode.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>303</width>
+    <width>306</width>
     <height>141</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>48</width>
+    <width>91</width>
     <height>48</height>
    </size>
   </property>
@@ -86,6 +86,42 @@
         </property>
         <property name="text">
          <string notr="true">Reset</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string notr="true">(+/- mm)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="step_lineEdit">
+        <property name="maximumSize">
+         <size>
+          <width>32</width>
+          <height>28</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string notr="true">incremental step (mm)</string>
+        </property>
+        <property name="text">
+         <string>1.0</string>
         </property>
        </widget>
       </item>
