added pref constraint 'full'

--- a/Resources/ui/ksu_prefs.ui
+++ b/Resources/ui/ksu_prefs.ui
@@ -382,6 +382,11 @@
             </item>
             <item>
              <property name="text">
+              <string>Full</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
               <string>None</string>
              </property>
             </item>
