--- a/Resources/ui/ksu_prefs.ui
+++ b/Resources/ui/ksu_prefs.ui
@@ -137,6 +137,9 @@
            <property name="prefPath" stdset="0">
             <cstring>Mod/kicadStepUpGui</cstring>
            </property>
+              <property name="mode">
+              <enum>Gui::FileChooser::Directory</enum>
+           </property>
           </widget>
          </item>
         </layout>
