--- a/Resources/ui/ksu_prefs.ui
+++ b/Resources/ui/ksu_prefs.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>542</width>
-    <height>664</height>
+    <height>712</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -162,7 +162,7 @@
            <x>10</x>
            <y>20</y>
            <width>491</width>
-           <height>24</height>
+           <height>26</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_12">
@@ -266,7 +266,7 @@
            <x>10</x>
            <y>50</y>
            <width>491</width>
-           <height>24</height>
+           <height>26</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_13">
@@ -335,7 +335,7 @@
            <x>10</x>
            <y>80</y>
            <width>491</width>
-           <height>24</height>
+           <height>26</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_14">
@@ -435,7 +435,7 @@
            <x>10</x>
            <y>165</y>
            <width>491</width>
-           <height>24</height>
+           <height>30</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
@@ -488,7 +488,7 @@
            <x>10</x>
            <y>195</y>
            <width>491</width>
-           <height>24</height>
+           <height>30</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -539,7 +539,7 @@
            <x>10</x>
            <y>225</y>
            <width>491</width>
-           <height>24</height>
+           <height>30</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_7">
@@ -590,7 +590,7 @@
            <x>9</x>
            <y>110</y>
            <width>491</width>
-           <height>24</height>
+           <height>30</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -644,7 +644,7 @@ default '0.01mm'</string>
           <x>0</x>
           <y>370</y>
           <width>522</width>
-          <height>216</height>
+          <height>246</height>
          </rect>
         </property>
         <property name="title">
@@ -706,7 +706,7 @@ default '0.01mm'</string>
            <x>9</x>
            <y>75</y>
            <width>491</width>
-           <height>24</height>
+           <height>26</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_11">
@@ -775,7 +775,7 @@ default '0.01mm'</string>
            <x>8</x>
            <y>105</y>
            <width>491</width>
-           <height>24</height>
+           <height>26</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_15">
@@ -896,7 +896,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>9</x>
-           <y>190</y>
+           <y>215</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -942,12 +942,43 @@ Allowing or not Loading Multi Parts objects</string>
           <cstring>Mod/kicadStepUpGui</cstring>
          </property>
         </widget>
+        <widget class="Gui::PrefCheckBox" name="cb_stpz_export">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="geometry">
+          <rect>
+           <x>8</x>
+           <y>190</y>
+           <width>463</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="toolTip">
+          <string notr="true">Enable compressed STEP file ('.stpZ') generation exporting</string>
+         </property>
+         <property name="text">
+          <string notr="true">Enable compressed STEP file ('.stpZ') generation exporting</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <property name="tristate">
+          <bool>false</bool>
+         </property>
+         <property name="prefEntry" stdset="0">
+          <cstring>stpz_export_enabled</cstring>
+         </property>
+         <property name="prefPath" stdset="0">
+          <cstring>Mod/kicadStepUpGui</cstring>
+         </property>
+        </widget>
        </widget>
        <widget class="QGroupBox" name="mcad_compare">
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>590</y>
+          <y>615</y>
           <width>522</width>
           <height>46</height>
          </rect>
