--- a/Resources/ui/ksu_prefs.ui
+++ b/Resources/ui/ksu_prefs.ui
@@ -644,7 +644,7 @@ default '0.01mm'</string>
           <x>0</x>
           <y>370</y>
           <width>522</width>
-          <height>291</height>
+          <height>301</height>
          </rect>
         </property>
         <property name="title">
@@ -654,7 +654,7 @@ default '0.01mm'</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>20</y>
+           <y>25</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -679,7 +679,7 @@ default '0.01mm'</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>45</y>
+           <y>50</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -704,7 +704,7 @@ default '0.01mm'</string>
          <property name="geometry">
           <rect>
            <x>9</x>
-           <y>75</y>
+           <y>80</y>
            <width>491</width>
            <height>26</height>
           </rect>
@@ -773,7 +773,7 @@ default '0.01mm'</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>105</y>
+           <y>110</y>
            <width>491</width>
            <height>26</height>
           </rect>
@@ -848,7 +848,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>140</y>
+           <y>145</y>
            <width>246</width>
            <height>20</height>
           </rect>
@@ -873,7 +873,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>165</y>
+           <y>170</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -904,7 +904,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>9</x>
-           <y>240</y>
+           <y>270</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -929,7 +929,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>267</x>
-           <y>140</y>
+           <y>145</y>
            <width>246</width>
            <height>20</height>
           </rect>
@@ -957,7 +957,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>215</y>
+           <y>220</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -988,7 +988,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>190</y>
+           <y>195</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -1012,12 +1012,43 @@ Allowing or not Loading Multi Parts objects</string>
           <cstring>Mod/kicadStepUpGui</cstring>
          </property>
         </widget>
+        <widget class="Gui::PrefCheckBox" name="cb_help_warn">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="geometry">
+          <rect>
+           <x>8</x>
+           <y>245</y>
+           <width>463</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="toolTip">
+          <string notr="true">Display STEP import settings warning</string>
+         </property>
+         <property name="text">
+          <string notr="true">Display STEP import settings warning</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <property name="tristate">
+          <bool>false</bool>
+         </property>
+         <property name="prefEntry" stdset="0">
+          <cstring>help_warning_enabled</cstring>
+         </property>
+         <property name="prefPath" stdset="0">
+          <cstring>Mod/kicadStepUpGui</cstring>
+         </property>
+        </widget>
        </widget>
        <widget class="QGroupBox" name="mcad_compare">
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>665</y>
+          <y>675</y>
           <width>522</width>
           <height>46</height>
          </rect>
