--- a/Resources/ui/STEP-preferences.ui
+++ b/Resources/ui/STEP-preferences.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string notr="true">STEP Preferences</string>
+   <string notr="true">STEP Suggested Preferences</string>
   </property>
   <property name="toolTip">
    <string/>
