Apply Transparency option from .wrl model

--- a/Resources/ui/ksu_prefs.ui
+++ b/Resources/ui/ksu_prefs.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>542</width>
-    <height>759</height>
+    <height>814</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,7 +40,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>20</y>
+          <y>25</y>
           <width>501</width>
           <height>34</height>
          </rect>
@@ -94,7 +94,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>60</y>
+          <y>65</y>
           <width>501</width>
           <height>34</height>
          </rect>
@@ -148,7 +148,7 @@
         <property name="geometry">
          <rect>
           <x>-1</x>
-          <y>105</y>
+          <y>110</y>
           <width>524</width>
           <height>261</height>
          </rect>
@@ -642,9 +642,9 @@ default '0.01mm'</string>
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>370</y>
+          <y>375</y>
           <width>522</width>
-          <height>301</height>
+          <height>341</height>
          </rect>
         </property>
         <property name="title">
@@ -904,7 +904,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>9</x>
-           <y>270</y>
+           <y>295</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -1019,7 +1019,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>245</y>
+           <y>270</y>
            <width>463</width>
            <height>20</height>
           </rect>
@@ -1043,12 +1043,43 @@ Allowing or not Loading Multi Parts objects</string>
           <cstring>Mod/kicadStepUpGui</cstring>
          </property>
         </widget>
+        <widget class="Gui::PrefCheckBox" name="cb_transparency_export">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="geometry">
+          <rect>
+           <x>8</x>
+           <y>245</y>
+           <width>463</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="toolTip">
+          <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Apply Transparency for 'Glass' or 'Led' Materials:&lt;/p&gt;&lt;p&gt;Force Transparency to STEP model if 'Glass' or 'Led' is found in '.wrl' model&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="text">
+          <string notr="true">Apply Transparency for 'Glass' or 'Led' Materials</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <property name="tristate">
+          <bool>false</bool>
+         </property>
+         <property name="prefEntry" stdset="0">
+          <cstring>transparency_material_enabled</cstring>
+         </property>
+         <property name="prefPath" stdset="0">
+          <cstring>Mod/kicadStepUpGui</cstring>
+         </property>
+        </widget>
        </widget>
        <widget class="QGroupBox" name="mcad_compare">
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>675</y>
+          <y>720</y>
           <width>522</width>
           <height>46</height>
          </rect>
@@ -1060,7 +1091,7 @@ Allowing or not Loading Multi Parts objects</string>
          <property name="geometry">
           <rect>
            <x>8</x>
-           <y>20</y>
+           <y>25</y>
            <width>463</width>
            <height>20</height>
           </rect>
