Multiple 3D model paths
Add ability to search multiple paths for 3D models.
Multiple paths can be configured in 'main 3D folder location' and 'secondary 3D folder loc' fields.
These 2 fields can be comma or carriage return separated lists of paths.
Currently multiple paths in these fields must be manually entered and not by using the '...' button.

--- a/Resources/ui/ksu_prefs.ui
+++ b/Resources/ui/ksu_prefs.ui
@@ -103,7 +103,7 @@
          <item>
           <widget class="QLabel" name="label_prefix3d_2">
            <property name="toolTip">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;your &lt;span style=&quot; font-weight:600;&quot;&gt;ALIAS&lt;/span&gt; 3D&lt;/p&gt;&lt;p&gt;model prefix path&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;your &lt;span style=&quot; font-weight:600;&quot;&gt;ALIAS&lt;/span&gt; 3D&lt;/p&gt;&lt;p&gt;model prefix path&lt;/p&gt;&lt;p&gt;Can be a comma-separated list of paths to search.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
            <property name="text">
             <string>secondary 3D folder loc
