--- a/Resources/ui/ksu_prefs-v1.ui
+++ b/Resources/ui/ksu_prefs-v1.ui
@@ -116,7 +116,7 @@
         </sizepolicy>
        </property>
        <property name="title">
-        <string>Working directory gerneral FEM solver frame work</string>
+        <string>Working directory general FEM solver frame work</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
